Login via facebook configurado

--- a/mobileapp/android/app/src/main/res/values/strings.xml
+++ b/mobileapp/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">mobileapp</string>
+    <string name="facebook_app_id">316794986144046</string>
 </resources>
